--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="intro">
         <h1 class="title">Hugo Baião</h1>
         <div class="headerp">
-            <p>Hi! Welcome to my page. My name is Hugo, I'm a customer support worker and aspiring programmer.</p>
-            <p>I'll use this place to share my projects. I'm currently focusing more on web development, but I plan on learning software development as well.</p>
+            <p>Hi, welcome to my page! My name is Hugo, I'm a customer support worker currently learning programming.</p>
+            <p>I'll use this place to share my projects and track my progress. I'm currently focusing more on web development, but I plan on learning software development as well.</p>
         </div>
     </div>
 </body>
