Styled Home page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="intro">
-        <h1 class="title">Hugo Baião</h1>
+        <h1 class="title">Home</h1>
+        <img src="media/pc.gif" alt="PC GIF" width="150" class="pc-gif">
         <div class="headerp">
             <p>Hi, welcome to my page! My name is Hugo, I'm a customer support worker currently learning programming.</p>
             <p>I'll use this place to share my projects and track my progress. I'm currently focusing more on web development, but I plan on learning software development as well.</p>
