Added Contact and Projects sections

--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
             <p>I'll use this place to share my projects and track my progress. I'm currently focusing more on web development, but I plan on learning software development as well.</p>
         </div>
     </div>
+    <div class="sections">
+        <p><a href=contact/contact.html>Contact</a></p>
+        <p><a href=projects/projects.html>Projects</a></p>
+    </div>
+    
 </body>
 </html>
